# cellular_automata_sand

./: Cargo.toml
src/: air.rs  app.rs  element.rs  main.rs  sand.rs  stone.rs  substance.rs  vector3.rs  world.rs  worldable.rs
