[package]
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
name = "minimal-winit"
publish = false
version = "0.1.0"

[features]
default = ["optimize"]
optimize = ["log/release_max_level_warn"]

[dependencies]
env_logger = "0.9"
log = "0.4"
pixels = "0.9.0"
rand = "0.8.5"
winit = "0.26"
winit_input_helper = "0.11"
